# django-docs-tutor

./: .gitignore  README.md  pyproject.toml
mysite/: note.txt
mysite/mysite/: settings.py
mysite/polls/: models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: index.html
